--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ build-job:       # This job runs in the build stage, which runs first.
 test-job:
     stage: test
     script:
-        - mvn test
+        - mvn test -DlastModGranularityMs=10000000
     artifacts:
       paths:
         - target/
