--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,8 +3,8 @@ image: maven:3.8.1-jdk-11-openj9,
 stages:          
   - build
   - test
-  - deploy
   - check
+  - deploy
 
 build-job:       # This job runs in the build stage, which runs first.
   stage: build
@@ -24,5 +24,13 @@ seleniumtest-job:
     image: markhobson/maven-firefox:jdk-11
     script:
         - mvn verify -DlastModGranularityMs=10000000
-    
+
+deploiement-job:
+    stage: deploy
+    rules:
+        - if: '$CI_COMMIT_BRANCH = "main"'
+          when: always
+        - when: never
+    script:
+        - echo "commit sur la branch main"
 
